k8s-deployment/backend-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    pulp.service: backend
  name: backend
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        pulp.service: backend
    spec:
      containers:
      - args:
        - python
        - manage.py
        - runserver
        - 0.0.0.0:8000
        image: gcr.io/sandbox-164917/pulp-backend:v1
        imagePullPolicy: Always
        name: backend
        livenessProbe:
          httpGet:
            path: /ready
            port: 80
          initialDelaySeconds: 30 
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /ready
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 20
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 2
        ports:
        - containerPort: 8000
        resources: {}
      restartPolicy: Always
status: {}
