k8s-deployment/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db 
  labels:
    pulp.service: db
spec:
  ports:
   - port: 5432
  selector:
   pulp.service: db
