k8s-deployment/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    pulp.service: frontend
  name: frontend
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    pulp.service: frontend
status:
  loadBalancer: {}
