k8s-deployment/node-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    pulp.service: node
  name: node
spec:
  ports:
  - name: "3000"
    port: 3000
    targetPort: 3000
  selector:
    pulp.service: node
status:
  loadBalancer: {}
