k8s-deployment/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    pulp.service: redis
spec:
  ports:
    - port: 6379
      name: redis
  selector:
    pulp.service: redis
