k8s-deployment/ingress.yaml
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  name: "pulp-ingress"
  namespace: "default"
spec:
  backend:
    serviceName: "frontend"
    servicePort: 8080
